--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BracketsActivity" />
-        <activity android:name=".RandomTextActivity"></activity>
+        <activity android:name=".PalindromeActivity"></activity>
     </application>
 
 </manifest>
