Brackets activity with text

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".PalindromeActivity"></activity>
+        <activity android:name=".BracketsActivity"></activity>
     </application>
 
 </manifest>
